FEAT: Bill Members endpoint
